updated source structurer and added watch script for easier testing

--- a/public/add.html
+++ b/public/add.html
@@ -8,5 +8,5 @@
     <button type="submit">Add</button>
   </form>
 
-  <script src="./add.js"></script>
+  <script src="./renderer/add.js"></script>
 </body>
