--- a/public/versions.html
+++ b/public/versions.html
@@ -23,6 +23,6 @@
     </ul>
     <h5>Other Processes</h5>
     <ul id="other-processes"></ul>
-    <script src="./versions.js"></script>
+    <script src="./renderer/versions.js"></script>
   </body>
 </html>
